--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "cnbox",
+  "name": "corebox",
   "version": "0.0.1",
   "description": "",
   "engines": {
     "node": ">=12.0"
   },
   "type": "module",
-  "main": "./src/cnbox.mjs",
+  "main": "./src/corebox.mjs",
   "scripts": {
     "demo": "node --experimental-modules demo.mjs | ./node_modules/.bin/bunyan",
     "test": "standard && node --experimental-modules mocha.mjs tests/*.test.mjs"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/pyseed/cnbox.git"
+    "url": "https://github.com/pyseed/corebox.git"
   },
   "author": "pyseed",
   "license": "MIT",
   "keywords": [],
   "bugs": {
-    "url": "https://github.com/pyseed/cnbox/issues"
+    "url": "https://github.com/pyseed/corebox/issues"
   },
-  "homepage": "https://github.com/pyseed/cnbox/blob/master/README.md",
+  "homepage": "https://github.com/pyseed/corebox/blob/master/README.md",
   "standard": {
     "globals": [
       "suite",
