--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@bundled-es-modules/uuid": "^3.3.2",
     "bunyan": "^1.8.12",
+    "console-log-level": "^1.4.1",
     "deepmerge": "^4.2.2",
     "mkdirp": "^0.5.1",
     "simple-glob": "^0.2.0"
