--- a/package.json
+++ b/package.json
@@ -50,9 +50,7 @@
   "devDependencies": {
     "capture-stdout": "^1.0.0",
     "chai": "^4.2.0",
-    "install": "^0.13.0",
-    "mocha": "5.2.0",
-    "npm": "^6.13.4",
+    "mocha": "^7.1.2",
     "sinon": "^7.4.0",
     "standard": "^14.3.1"
   }
