--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "bunyan": "^1.8.12",
     "console-log-level": "^1.4.1",
     "deepmerge": "^4.2.2",
-    "mkdirp": "^1.0.4",
-    "simple-glob": "^0.2.0"
+    "glob": "^7.1.6",
+    "mkdirp": "^1.0.4"
   },
   "devDependencies": {
     "capture-stdout": "^1.0.0",
