[IMP] package.json exports

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "node": ">=12.0"
   },
   "type": "module",
-  "main": "index.mjs",
-  "exports": "index.mjs",
+  "main": "./index.mjs",
+  "exports": "./index.mjs",
   "scripts": {
     "test": "standard && node --experimental-modules mocha.mjs tests/*.test.mjs"
   },
